:construction: Create and finalize first scene
A new demo scene for Paintbrush exists on the main menu as the
"Run Paintbrush Demo" option. It loads in the prototype stage with
the first puzzle.

It appears that the validation scheme doesn't run in the Simulator.
However, it works correctly on device. To make the prototype work
in the simulator, the actual result is ignored in the highlight
process and alway returns true. This behavior is automatically
disabled on device with a compiler flag.

The next step will be finding a means to move between puzzles in
the prototype to demonstrate the modularity.

Signed-off-by: Marquis Kurt <software@marquiskurt.net>

--- a/Shared/Assets/Localizations/Localizable.strings
+++ b/Shared/Assets/Localizations/Localizable.strings
@@ -27,9 +27,15 @@
 // MARK: - Example Content
 "example.hello_world" = "Hello, world!";
 "example.demo_prompt" = "Run Demo Scene";
+"example.paintbrush_demo_prompt" = "Run Paintbrush Demo";
 
 // MARK: - Settings
 "settings.name" = "Settings";
 "settings.debugging.title" = "Debugging";
 "settings.debugging.fps" = "Show Frames Per Second";
 "settings.debugging.nodes" = "Show Node Count";
+
+// MARK: - Errors
+"PaintbrushSolverError.noPathGenerated" = "No path could be generated.";
+"PaintbrushSolverError.imageCaptureFailure" = "Failed to capture image from the canvas.";
+"PaintbrushSolverError.predictionFailure" = "An error occurred during prediction.";
